--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-redux-poc",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./dist/index.js",
   "scripts": {
     "start": "webpack-dev-server --hot"
   },
